fix squishy problem

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -555,9 +555,7 @@ p{
   background:#fff;
 }
 
-rect[Attributes Style]{
-  fill: red;
-}
+
 
 #calendar {
   margin: 70px;
